packages/starlight-site-graph/styles/common.css
:root[data-theme='dark'] {
	--slsg-node-color: var(--sl-color-white);
	--slsg-node-color-hover: var(--sl-color-accent-high);
	--slsg-node-color-muted: var(--sl-color-gray-5);

	--slsg-node-color-current: var(--sl-color-green-high);
	--slsg-node-color-visited: var(--sl-color-purple-high);

	--slsg-link-color: var(--sl-color-gray-4);
	--slsg-link-color-hover: var(--sl-color-accent-high);
	--slsg-link-color-muted: var(--sl-color-gray-5);

	--slsg-label-color: var(--sl-color-text);
	--slsg-label-color-hover: var(--sl-color-accent-high);
}

:root[data-theme='light'] {
	--slsg-node-color: var(--sl-color-gray-3);
	--slsg-node-color-hover: var(--sl-color-accent);
	--slsg-node-color-muted: var(--sl-color-gray-5);

	--slsg-node-color-current: var(--sl-color-green);
	--slsg-node-color-visited: var(--sl-color-purple);

	--slsg-link-color: var(--sl-color-gray-5);
	--slsg-link-color-hover: var(--sl-color-accent);
	--slsg-link-color-muted: var(--sl-color-gray-6);

	--slsg-label-color: var(--sl-color-text);
	--slsg-label-color-hover: var(--sl-color-accent);
}

/* =================================== Graph Container Styling ============================================== */
.graph-panel {
	padding: 1rem var(--sl-sidebar-pad-x);
}

.graph-component {
	width: 250px;
	height: 250px;
}

.graph-container {
	position: relative;
	width: inherit;
	height: inherit;

	box-sizing: border-box;

	border-radius: 5px;
	outline: 1px solid var(--sl-color-gray-6);

	canvas {
		width: inherit;
		height: inherit;
		border-radius: inherit;
	}
}

/* ========================================================================================================= */

/* ====================================== Fullscreen Styling =============================================== */

body:has(.background-blur) {
	#starlight__sidebar {
		z-index: -1;
	}

	.header {
		z-index: -1;
	}
}

.background-blur {
	position: fixed;
	top: 0;
	left: 0;

	backdrop-filter: blur(4px);
	width: 100%;
	height: 100%;

	z-index: 10;
}

.is-fullscreen {
	background-color: var(--sl-color-bg-sidebar);

	position: fixed;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	z-index: 1000;

	outline: unset;

	height: 60vh;
	width: 50vw;

	.graph-action-container svg {
		width: 24px;
		height: 24px;
	}
}

/* ========================================================================================================== */

/* ====================================== Graph Action Styles =============================================== */

.graph-action-container {
	position: absolute;
	right: 0;

	display: flex;
	flex-direction: row;
	gap: 0.2rem;
	padding: 0.2rem 0.2rem 0.4rem 0.5rem;

	background-color: color-mix(in srgb, var(--sl-color-bg) 80%, transparent);
	border-radius: 0 0 0 16px;
	backdrop-filter: blur(4px);
}

.graph-action-button {
	display: flex;

	color: var(--sl-color-white);
	background-color: transparent;
	transition: background-color 0.3s ease;

	border: unset;
	border-radius: 4px;

	padding: 0.2rem;
	opacity: 0.5;

	&:hover {
		background-color: var(--sl-color-gray-5);
	}

	svg {
		width: 16px;
		height: 16px;
	}
}

/* ========================================================================================================== */

/* ====================================== Context Menu Styles =============================================== */

.menu-container {
	position: fixed;
	z-index: 1000;
}

.menu {
	display: inline-flex;
	background-color: var(--sl-color-gray-6);
	border: 1px var(--sl-color-gray-4) solid;
	width: 170px;
	border-radius: 10px;
	overflow: hidden;
	flex-direction: column;
	padding: 6px;
}

.menu-item {
	display: flex;
	align-items: center;
	gap: 8px;
	padding: 2px 4px;
	margin: 0 2px;
	border-radius: 4px;
	white-space: nowrap;
}

.menu-item:hover {
	background-color: var(--sl-color-gray-5);
}

.menu-item-icon {
	display: flex;
}

.menu-item-icon svg {
	width: 20px;
	height: 20px;
}

.menu-item-title {
	font-weight: 600;
	font-size: var(--sl-text-xs);
}
/* ========================================================================================================== */


/* ======================================== Popup Menu Styling ============================================== */

.popup-menu {
	position: fixed;
	z-index: 1000;
	right: 8px;
	top: 8px;

	background-color: color-mix(in srgb, var(--sl-color-bg) 90%, transparent);
	border: 1px solid var(--sl-color-gray-6);
	border-radius: 8px;
	padding: 8px;

	overflow: hidden;

	backdrop-filter: blur(32px);


	.value-slider {
		display: flex;
		font-size: var(--sl-text-xs);
		flex-wrap: wrap;


		.value-slider-text {
			display: flex;
			gap: 0.5rem;
		}

		.value-slider-label {
			font-weight: 900;
		}
	}
}

